--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "react": "^16.11.0",
+    "react-add-to-homescreen": "^1.1.0",
     "react-apollo": "^3.1.3",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "react-slick": "^0.25.2"
+    "react-slick": "^0.25.2",
+    "semantic-ui-react": "^0.88.1"
   },
   "scripts": {
     "start": "react-scripts start",
