--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "cliente",
   "version": "0.1.0",
-  "private": true,  
+  "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
     "apollo-boost": "^0.4.4",
     "bootstrap": "^4.3.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "popper.js": "^1.16.0",
     "react": "^16.11.0",
     "react-add-to-homescreen": "^1.1.0",
@@ -21,11 +25,11 @@
     "use-persisted-state": "^0.3.0"
   },
   "scripts": {
-    "run": "react-scripts start",
+    "dev": "react-scripts start",
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"    
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
